<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <organization>
        <name>The Pond Project</name>
    </organization>

    <artifactId>pond-parent</artifactId>
    <groupId>pond</groupId>
    <packaging>pom</packaging>
    <version>0.3.0</version>

    <name>Pond</name>
    <url>http://www.shuimin.com</url>

    <description>
        Pond is a rapid web development framework designed for
        building flexible and scalable systems.
    </description>

    <licenses>
        <license>
            <name>MIT</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>java11</id>
            <activation>
                <jdk>11</jdk>
            </activation>
            <properties>
                <argLine.java11></argLine.java11>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <enforcer.plugin.version>3.0.0-M1</enforcer.plugin.version>
            </properties>
        </profile>

        <profile>
            <id>jdk8</id>
            <activation>
                <jdk>[1.8,)</jdk>
            </activation>
            <properties>
                <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
                <enforcer.plugin.version>3.0.0-M1</enforcer.plugin.version>
            </properties>
        </profile>

    </profiles>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <enforcer.plugin.version>3.0.0-M1</enforcer.plugin.version>
        <argLine.common>
            -server
            -XX:+HeapDumpOnOutOfMemoryError
        </argLine.common>
        <argLine.printGC>-XX:+PrintGCDetails</argLine.printGC>
        <argLine.java11/>
    </properties>

    <modules>
        <module>common</module>
        <module>common-extra</module>
        <module>core</module>
        <module>net</module>
        <module>web</module>
        <module>db</module>
        <module>table</module>
        <module>all</module>
        <module>security</module>
        <module>web-restful</module>
        <module>web-swagger</module>
        <module>web-fileserver</module>
        <module>web-api-contract</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.7</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.3</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.1.3</version>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility-proxy</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            <!--plugin>
              <artifactId>maven-enforcer-plugin</artifactId>
                  <version>${enforcer.plugin.version}</version>
                  <executions>
                    <execution>
                      <id>enforce-tools</id>
                      <goals>
                        <goal>enforce</goal>
                      </goals>
                      <configuration>
                        <rules>
                          <requireJavaVersion>
                            <version>[1.8.0,)</version>
                          </requireJavaVersion>
                          <requireMavenVersion>
                            <version>[3.1.1,)</version>
                          </requireMavenVersion>
                          <requireProperty>
                            <regexMessage>
                              x86_64/AARCH64 JDK must be used
                            </regexMessage>
                            <property>os.detacted.arch</property>
                            <regex>^(x86_64|aarch_64)$</regex>
                          </requireProperty>
                        </rules>
                      </configuration>
                    </execution>
                  </executions>
                </plugin-->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <!--
                    <compilerVersion>1.8</compilerVersion>
                    -->
                    <fork>true</fork>
                    <compilerVersion>11</compilerVersion>
                    <release>11</release>
                    <source>11</source>
                    <target>11</target>
                    <!--
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    -->
                    <encoding>UTF-8</encoding>
                    <debug>true</debug>
                    <optimize>true</optimize>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <compilerArgument>-Xlint:-options</compilerArgument>
                    <!--compilerArgument>-parameters</compilerArgument-->
                    <parameters>true</parameters>

                    <!-- XXX: maven-release-plugin complains - MRELEASE-715 -->
                    <!--
                    <compilerArguments>
                      <Xlint:-options />
                      <Xlint:unchecked />
                      <Xlint:deprecation />
                    </compilerArguments>
                    -->
                    <meminitial>256m</meminitial>
                    <maxmem>1024m</maxmem>
                    <excludes>
                        <exclude>**/package-info.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <includes>
                        <include>**/*Test*.java</include>
                        <include>**/*Benchmark*.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/Abstract*</exclude>
                        <exclude>**/*TestUTil*</exclude>
                    </excludes>
                    <argLine>
                        --illegal-access=permit
                        -XX:+IgnoreUnrecognizedVMOptions
                    </argLine>
                    <!--jvm>${javaHome}/bin/java</jvm-->
                    <trimStackTrace>false</trimStackTrace>
                    <!--useSystemClassLoader>false</useSystemClassLoader-->
                </configuration>
            </plugin>
            <!--plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin-->
        </plugins>
    </build>
</project>
